--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,10 @@ stages:
   - publish
 
 variables:
-  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
+  DOCKER_DRIVER: overlay2
+  DOCKER_HOST: unix:///var/run/docker.sock
+  TESTCONTAINERS_HOST_OVERRIDE: "host.docker.internal"
+#  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
 
 cache:
   key: ${CI_COMMIT_REF_SLUG}
@@ -40,9 +43,9 @@ test:
 
 publish:
   stage: publish
-  before_script:
-    - echo $CI_API_V4_URL
-    - echo $CI_PROJECT_ID  #TODO: remove
-    - echo $CI_JOB_TOKEN   #TODO: remove
+  #  before_script:
+  #    - echo $CI_API_V4_URL
+  #    - echo $CI_PROJECT_ID  #TODO: remove
+  #    - echo $CI_JOB_TOKEN   #TODO: remove
   script:
     - gradle publish
