--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,6 +42,10 @@ test:
       - build/reports/jacoco/test/jacocoTestReport.xml
   coverage: '/Total.*?([0-9,.]{1,5})%/'
 
+gemnasium-maven-dependency_scanning:
+  before_script:
+    - chmod +x gradlew
+
 sonarcloud-check:
   stage: sonar
   cache:
@@ -66,3 +70,7 @@ publish:
     - gradle publish
   only:
     - tags
+
+include:
+  - template: Security/Dependency-Scanning.gitlab-ci.yml
+    path: /
