--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,10 @@
 kotlin.code.style=official
+springBootVersion=3.4.6
+springDependencyManagementVersion=1.1.7
+kotlinJVMVersion=2.1.20
+kMongoVersion=4.10.0
+netMinidevVersion=2.5.2
+nettyHandlerVersion=4.1.118.Final
+commonsCompressVersion=1.26.0
+reactorKafkaVersion=1.3.23
+mockkVersion=1.12.0
