fix: Make OutboxRelayerService use SpecificRecord

--- a/gradle.properties
+++ b/gradle.properties
@@ -8,3 +8,5 @@ nettyHandlerVersion=4.1.118.Final
 commonsCompressVersion=1.26.0
 reactorKafkaVersion=1.3.23
 mockkVersion=1.12.0
+jacksonModuleKotlinVersion=2.19.0
+avroVersion=1.12.0
